--- a/03_gestion_de_repositorios.ipynb
+++ b/03_gestion_de_repositorios.ipynb
@@ -233,7 +233,7 @@
     "* **Sin seguimiento** (untracked), lo que implica que el archivo no está en el índice del repositorio y por lo tanto sus cambios no serán rastreados por *Git*.\n",
     "* **En seguimiento** (tracked) lo que implica que el archivo está en el índice del repositorio.\n",
     "    * **Modificado** (modified) lo que implica que un archivo ha sido modificado, eliminado o ha cambiado de nombre.\n",
-    "    * **No modificado** (modified).\n",
+    "    * **No modificado** (unmodified).\n",
     "    \n",
     "El comando ```git status``` da un resumen de:\n",
     "* Aquellos archivos creados después del último commit y que no tienen seguimiento.\n",
@@ -268,7 +268,7 @@
    "source": [
     "#### La opción ```--all```.\n",
     "\n",
-    "Esta opción aplicará la ejecuciónde ```git add`` a todos los archivos del repositorio."
+    "Esta opción aplicará la ejecuciónde ```git add``` a todos los archivos del repositorio."
    ]
   },
   {
@@ -424,6 +424,15 @@
    },
    "outputs": [],
    "source": [
+    "git ls-files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "git ls-files -s"
    ]
   },
@@ -502,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* El repositorio tiene los archivos.\n",
+    "* El sistema de archivos del repositorio tiene los archivos.\n",
     "    * ```archivo-1```\n",
     "    * ```archivo-2``` \n",
     "    * ```archivo-3```\n",
@@ -1020,6 +1029,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git ls-files"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1137,7 +1155,7 @@
     "Donde:\n",
     "\n",
     "* ```<rama>``` es la rama del repositorio en la que se realzia el commit. La rama que se crra pord efecto en un repositorio es ```master```.\n",
-    "* ```<tipo de commit>``` este dato es opcional y cuando se realiza el primer commti de un repoitorio despliega el mensaje ```root-commit````.\n",
+    "* ```<tipo de commit>``` este dato es opcional y cuando se realiza el primer commti de un repoitorio despliega el mensaje ```root-commit```.\n",
     "* ```<identificador corto>```, el cual es un número hexadecimal de 7 dígitos que corresponde a los primeros 7 dígitos del número identificador completo del commit"
    ]
   },
@@ -1351,7 +1369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git diff 26d155a 2b61791 "
+    "git diff 663a41c b94e762"
    ]
   },
   {
@@ -1360,7 +1378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git diff 26d155a 2b61791 archivo-1"
+    "git diff 663a41c b94e762 archivo-1"
    ]
   },
   {
