--- a/04_gestion_de_ramas.ipynb
+++ b/04_gestion_de_ramas.ipynb
@@ -209,6 +209,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git log"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,7 +236,7 @@
     "\n",
     "```\n",
     "git checkout <rama>\n",
-    "````\n",
+    "```\n",
     "\n",
     "Donde:\n",
     "\n",
@@ -454,6 +463,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cat archivo-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "echo \"Otra linea\" >> archivo-1"
    ]
   },
@@ -558,7 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git diff master nueva archivo-1"
+    "git diff nueva master archivo-1"
    ]
   },
   {
@@ -610,21 +628,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "git merge nueva"
+    "git log --oneline"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "git commit -m \"commit fusionado\""
+    "git merge nueva -m \"commit fusionado\""
    ]
   },
   {
@@ -652,6 +670,24 @@
    "outputs": [],
    "source": [
     "ls -a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat archivo-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat archivo_nuevo"
    ]
   },
   {
@@ -753,7 +789,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git checkout aa3ef92 #NOTA: Es necesario sustituir el número identificador."
+    "git checkout b94e762 #NOTA: Es necesario sustituir el número identificador."
    ]
   },
   {
@@ -771,7 +807,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "git log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "git checkout -b restituida"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git branch -l"
    ]
   },
   {
