--- a/05_repositorios_remotos.ipynb
+++ b/05_repositorios_remotos.ipynb
@@ -58,6 +58,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git clone demo experimental"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree experimental"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rm -rf experimental"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git clone https://github.com/PythonistaIO/prueba.git experimental"
+    "git clone https://github.com/PythonistaIO/prueba.git"
    ]
   },
   {
@@ -86,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cd experimental"
+    "cd prueba"
    ]
   },
   {
@@ -175,6 +211,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat .git/config"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -208,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,20 +262,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "alterno\n",
-      "origin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git remote show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git config --local --list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat .git/config"
    ]
   },
   {
@@ -278,45 +332,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: checking out 'origin/master'.\n",
-      "\n",
-      "You are in 'detached HEAD' state. You can look around, make experimental\n",
-      "changes and commit them, and you can discard any commits you make in this\n",
-      "state without impacting any branches by performing another checkout.\n",
-      "\n",
-      "If you want to create a new branch to retain commits you create, you may\n",
-      "do so (now or later) by using -b with the checkout command again. Example:\n",
-      "\n",
-      "  git checkout -b <new-branch-name>\n",
-      "\n",
-      "HEAD is now at 69452b7 enviar a remoto\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git checkout origin/master"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "archivo  local  nuevo_archivo  otro  README.md\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ls"
    ]
@@ -330,34 +357,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Switched to branch 'master'\n",
-      "Your branch is up to date with 'origin/master'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git checkout master"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "touch archivo-local"
+    "touch archivo-localizado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,19 +384,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[master 8e9b25e] commit local\n",
-      " 1 file changed, 0 insertions(+), 0 deletions(-)\n",
-      " create mode 100644 archivo-local\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git commit -m \"commit local\" "
    ]
@@ -392,40 +400,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "diff --git a/archivo-local b/archivo-local\n",
-      "new file mode 100644\n",
-      "index 0000000..e69de29\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git diff origin/master master"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch master\n",
-      "Your branch is ahead of 'origin/master' by 1 commit.\n",
-      "  (use \"git push\" to publish your local commits)\n",
-      "\n",
-      "nothing to commit, working tree clean\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git status"
    ]
@@ -477,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,51 +472,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch master\n",
-      "Your branch is up to date with 'origin/master'.\n",
-      "\n",
-      "nothing to commit, working tree clean\n"
-     ]
-    }
-   ],
-   "source": [
-    "git status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "git diff master origin/master"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Switched to branch 'master'\n",
-      "Your branch is up to date with 'origin/master'.\n"
-     ]
-    }
-   ],
-   "source": [
-    "git checkout master"
+    "git status"
    ]
   },
   {
@@ -539,7 +487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls"
+    "git diff master origin/master"
    ]
   },
   {
@@ -553,49 +501,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Already up to date.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git pull"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: checking out 'origin/master'.\n",
-      "\n",
-      "You are in 'detached HEAD' state. You can look around, make experimental\n",
-      "changes and commit them, and you can discard any commits you make in this\n",
-      "state without impacting any branches by performing another checkout.\n",
-      "\n",
-      "If you want to create a new branch to retain commits you create, you may\n",
-      "do so (now or later) by using -b with the checkout command again. Example:\n",
-      "\n",
-      "  git checkout -b <new-branch-name>\n",
-      "\n",
-      "HEAD is now at 8e9b25e commit local\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "git checkout origin/master"
+    "git commit -m \"nuevo remoto\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git status"
    ]
   },
   {
@@ -619,19 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Username for 'https://github.com': \r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "git push "
+    "git push origin master"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwd"
    ]
   },
   {
