--- a/06_flujos_de_trabajo.ipynb
+++ b/06_flujos_de_trabajo.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Giflow.\n",
+    "## Gitflow.\n",
     "\n",
     "[*Gitflow*](https://nvie.com/posts/a-successful-git-branching-model/) es un modelo de flujo de trabajo peopuesto por Vincent Driessen.\n",
     "\n",
@@ -62,7 +62,7 @@
    "metadata": {},
    "source": [
     "<p style=\"text-align: center\"><a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\"><img alt=\"Licencia Creative Commons\" style=\"border-width:0\" src=\"https://i.creativecommons.org/l/by/4.0/80x15.png\" /></a><br />Esta obra está bajo una <a rel=\"license\" href=\"http://creativecommons.org/licenses/by/4.0/\">Licencia Creative Commons Atribución 4.0 Internacional</a>.</p>\n",
-    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2018.</p>"
+    "<p style=\"text-align: center\">&copy; José Luis Chiquete Valdivieso. 2019.</p>"
    ]
   }
  ],
