--- a/02_introduccion_a_git.ipynb
+++ b/02_introduccion_a_git.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://pythonista.io\"> <img src=\"img/pythonista.png\" width=\"100px\"></a>"
+    "<a href=\"https://cloudevel.com\"> <img src=\"img/cloudevel.png\" width=\"500px\"></a>"
    ]
   },
   {
@@ -100,7 +100,7 @@
     "\n",
     "La siguiente inagen correpsonde a la interfas de *Git GUI*.\n",
     "\n",
-    "<img src=\"img/02/git-gui.png\" width=\"250px\">"
+    "<img src=\"img/01/git-gui.png\" width=\"250px\">"
    ]
   },
   {
@@ -225,6 +225,15 @@
    "outputs": [],
    "source": [
     "ls -al .git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree .git"
    ]
   },
   {
@@ -663,6 +672,15 @@
    "outputs": [],
    "source": [
     "git config --get use.error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat ~/.gitconfig"
    ]
   },
   {
