--- a/04_gestion_de_repositorios.ipynb
+++ b/04_gestion_de_repositorios.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://pythonista.io\"> <img src=\"img/pythonista.png\" width=\"100px\"></a>"
+    "<a href=\"https://cloudevel.com\"> <img src=\"img/cloudevel.png\" width=\"500px\"></a>"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
     "    \n",
     "El comando ```git status``` da un resumen de:\n",
     "* Aquellos archivos creados después del último commit y que no tienen seguimiento.\n",
-    "* Aquellos archovos que están en seguimiento y que fueron modificados después del último commit. "
+    "* Aquellos archivos que están en seguimiento y que fueron modificados después del último commit. "
    ]
   },
   {
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En este momento los archivos reci;ehn creados no están en seguimiento."
+    "* En este momento los archivos recién creados no están en seguimiento."
    ]
   },
   {
@@ -424,7 +424,7 @@
    },
    "outputs": [],
    "source": [
-    "git ls-files"
+    "git ls-files -s"
    ]
   },
   {
@@ -531,7 +531,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "git status"
@@ -572,7 +574,7 @@
     "\n",
     "Una vez que el usuario realiza todas las operaciones necesarias en el área de preparación (staging area) está listo para hacer un commit.\n",
     "\n",
-    "**Nota:** Para poder realizar un commit es necesario que el usuario defina al menos los campos ```user.name```y ```user.email``` en la configuración del ámbito ```--global```."
+    "**Nota:** Para poder realizar un commit es necesario que el usuario defina al menos los campos ```user.name``` y ```user.email``` en la configuración del ámbito ```--global```."
    ]
   },
   {
@@ -583,7 +585,7 @@
     "\n",
     "* Cada objeto en el área de preparación es evaluado. \n",
     "    * En caso de que sea un nuevo objeto, este será incluído en el estado del nuevo commit. \n",
-    "    * En caso de que el objeto ya esté regostrasdo en un commit previo y haya sido modificado, se enumerarán y registrarán las modificaciones con respecto a la versión previa.\n",
+    "    * En caso de que el objeto ya esté registrado en un commit previo y haya sido modificado, se enumerarán y registrarán las modificaciones con respecto a la versión previa.\n",
     "    * Todos los cambios serán registrados.\n",
     "    * Se registrarán los cambios en el estado del repostorio, así como el momento exacto del commit. \n",
     "    * Al commit se le asignará un identificador único que corresponde a un número hexadecimal.\n",
@@ -688,7 +690,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "git status"
@@ -698,7 +702,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Eliminacion de un objeto.\n",
+    "### Estructura del mensaje del commit.\n",
+    "\n",
+    "Una vez hecho el commit, *Git* regesa un mensaje como el siguiente:\n",
+    "\n",
+    "````bash\n",
+    "[master (root-commit) 3c76e61] primer commit\n",
+    " 4 files changed, 1 insertion(+)\n",
+    " create mode 100644 .gitignore\n",
+    " create mode 100644 archivo-1\n",
+    " create mode 100644 archivo-2\n",
+    " create mode 100644 archivo-3\n",
+    "```\n",
+    "\n",
+    "Este mensaje se compone de:\n",
+    "* Un encabezado que describe al commit.\n",
+    "* Un listado de las adiciones o modificaciones de los objetos en el espacio de preparación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### El encabezado de un mensaje de commit.\n",
+    "\n",
+    "El encabezado del mensaje de commit tiene una estructura como la siguiente:\n",
+    "\n",
+    "``` bash\n",
+    "[<rama> (<tipo de commit>) <identificador corto>] <mensaje>\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<rama>``` es la rama del repositorio en la que se realzia el commit. La rama que se crra pord efecto en un repositorio es ```master```.\n",
+    "* ```<tipo de commit>``` este dato es opcional y cuando se realiza el primer commti de un repoitorio despliega el mensaje ```root-commit````.\n",
+    "* ```<identificador corto>```, el cual es un número hexadecimal de 7 dígitos que corresponde a los primeros 7 dígitos del número identificador completo del commit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eliminación de un objeto.\n",
     "\n",
     "El comando ```git rm``` se utiliza para eliminar a un objeto tanto del repositorio como de su índice.\n",
     "\n",
@@ -978,17 +1023,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Revisión de la actividad de un repositorio de un archivo.\n",
-    "\n"
+    "## Despliegue de la historia de un repositorio o un archivo.\n",
+    "\n",
+    "El comando ```git log``` permite desplegar la historia de un repositorio o de un archivo.\n",
+    "\n",
+    "La documentación de referencia de ```git log``` está disponible en:\n",
+    "\n",
+    "https://git-scm.com/docs/git-log"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "git log"
+    "### Despliegue de la historia de un repositorio.\n",
+    "\n",
+    "La sintaxis para desplegar la historia de un repositorio es la siguiente:\n",
+    "\n",
+    "``` bash\n",
+    "git log\n",
+    "```\n",
+    "* Para un archivo se utiliza la siguiente sintaxis:\n",
+    "\n",
+    "``` bash\n",
+    "git log <archivo>\n",
+    "```\n",
+    "\n",
+    "El resutado es un listado de todos los commits empezando por el más reciente con los siguientes datos.\n",
+    "\n",
+    "* El número completo del identficador del commit y la rama del commit.\n",
+    "* El nombre del autor según el campo ```user.name``` de la configuración.\n",
+    "* La dirección de correo  del autor según el campo ```user.emal``` de la configuración."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará la historia de los commits realizados en el repositorio ```demo```."
    ]
   },
   {
@@ -999,22 +1078,107 @@
    },
    "outputs": [],
    "source": [
+    "git log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Despliegue de la historia de un archivo.\n",
+    "\n",
+    "La sintaxis para desplegar la historia de un archivo es:\n",
+    "\n",
+    "``` bash\n",
+    "git log <archivo>\n",
+    "```\n",
+    "\n",
+    "El resutado es un listado de los commits en los que el archivo en cuestión fue modificado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará la historia de los commits en los que se modificó el archivo ```archivo-1``` en el repositorio ```demo```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "git log .gitignore"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La opción ```--oneline```.\n",
+    "\n",
+    "Esta opción permite desplegar un listado resumido en una sola línea con la siguiente estructura:\n",
+    "\n",
+    "\n",
+    "``` bash\n",
+    "<identificador corto> (HEAD -> <rama>) <mensaje>\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<rama>``` es la rama del repositorio en la que se realzia el commit. La rama que se crra pord efecto en un repositorio es ```master```.\n",
+    "* ```<tipo de commit>``` este dato es opcional y cuando se realiza el primer commti de un repoitorio despliega el mensaje ```root-commit````.\n",
+    "* ```<identificador corto>```, el cual es un número hexadecimal de 7 dígitos que corresponde a los primeros 7 dígitos del número identificador completo del commit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplos:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará la historia de los commits realizados en el repositorio ```demo``` con una descripción corta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
     "git log --oneline"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "git log archivo-1"
+    "* La siguiente celda mostrará la historia de los commits en los que el archivo ```archivo-1``` del repositorio ```demo``` fue modificdo con una descripción corta."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "git log --oneline archivo-1"
@@ -1024,13 +1188,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Revisión de los cambios entre commits."
+    "## El comando ```git show```.\n",
+    "\n",
+    "El comando ```git show```permite msotrar la información del commit más reciente, incluyendo un resumen de las modificaciones a los archivos registradas en dicho commit.\n",
+    "\n",
+    "```\n",
+    "git show <ruta>\n",
+    "```\n",
+    "Donde:\n",
+    "* ```ruta``` es la ruta a un archivo. En caso de que no se indique la ruta, se traerá la información de todos los archivos modificados en el commit.\n",
+    "\n",
+    "\n",
+    "La documentación de referencia de ```git show``` está disponible en:\n",
+    "\n",
+    "https://git-scm.com/docs/git-show"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará los detalles registrados en el commit más reciente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git show"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda mostrará los detalles registrados en el commit más recientes afectando al archivo ```archivo-1```. En vista de que no hubo afectaciones, no regresará nada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git show archivo-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparación entre archivos de distintos commits.\n",
+    "\n",
+    "El comando ```git diff```permite entre otras cosas visualizar las diferencias de uno o varios archivos entre un commit y otro.\n",
+    "\n",
+    "\n",
+    "La sintaxis de este comando es:\n",
+    "\n",
+    "``` bash\n",
+    "git diff <identificador 1> <identificador 2>\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<identificador 1>``` e  ```<identificador 2>``` son los dígitos iniciales de los números identificadores de algún commit realizado. El número de dígitos es arbitrario, siempre que el commit pueda ser identificado plenamente.\n",
+    "\n",
+    "\n",
+    "El resultado es un listado de cada objetos que presente variaciones entre un commit y otro, así como la descripción de dichas diferencias.\n",
+    "\n",
+    "La documentación de referencia de ```git diff```está disponible en:\n",
+    "\n",
+    "https://git-scm.com/docs/git-diff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* la siguiente celda añadirá una línea de texto al archivo ```archivo-1```."
+   ]
   },
   {
    "cell_type": "code",
@@ -1039,6 +1291,22 @@
    "outputs": [],
    "source": [
     "echo Hola > archivo-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat archivo-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda traerá al área de preparación aquellos objetos que hayan sido modificados posteriormente al último commit y hará un nuevo commit con el mensaje ```cuarto commit```"
    ]
   },
   {
@@ -1056,15 +1324,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "* La siguiente celda enlistará de forma corta todos los commits. El resultado será similar a los siguiente:\n",
     "\n",
     "```bash\n",
-    "> git log --oneline\n",
-    "\n",
     "a1c53ed (HEAD -> master) cuarto commit\n",
     "52c9f8c segundo commit\n",
     "e71f6f8 primer commit\n",
-    "```"
+    "```\n",
+    "**Nota:** Cabe aclarar que los números identificadores siempre serán distintos en cada caso."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "git log --oneline"
    ]
   },
   {
@@ -1073,16 +1351,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git log --oneline"
+    "git diff 26d155a 2b61791 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git diff 26d155a 2b61791 archivo-1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Para obtener un listado de diferencias entre el commit con descripción ```cuarto commit``` (en este ejemplo correspondería al identificador ```a1c53ed```) y el que tiene la descripción ```primer commit``` (en este ejemplo correspondería al identificador ```e71f6f8```).\n",
+    "\n",
+    "La operación sería similar a lo siguiente.\n",
+    "\n",
     "``` bash\n",
     "> git diff a1c53ed e71f6f8\n",
+    "```\n",
+    "Y el resultado sería similar al siguiente.\n",
     "\n",
+    "``` bash\n",
     "diff --git a/archivo-1 b/archivo-1\n",
     "index a19abfe..e69de29 100644\n",
     "--- a/archivo-1\n",
@@ -1092,7 +1386,9 @@
     "diff --git a/archivo-3 b/archivo-3\n",
     "new file mode 100644\n",
     "index 0000000..e69de29\n",
-    "```"
+    "```\n",
+    "\n",
+    "**Nota:** Cabe hacer notar que cada objeto del índice tiene su propio número identificador."
    ]
   },
   {
@@ -1101,16 +1397,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git diff c4c7d69 d8dfa45"
+    "git diff 4237089 a26eaf2 # NOTA: Es necesario sustituir los números identificadores."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Visualización de cambios de un archivo específico en distintos commits.\n",
+    "\n",
+    "Para conocer las diferencias\n",
+    "\n",
+    "\n",
+    "La sintaxis de este comando es:\n",
+    "\n",
+    "``` bash\n",
+    "git diff <identificador 1> <identificador 2> <ruta>\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<identificador 1>``` e  ```<identificador 2>``` son los dígitos iniciales de los números identificadores de algún commit realizado. El número de dígitos es arbitrario, siempre que el commit pueda ser identificado plenamente.\n",
+    "\n",
+    "* ```<ruta>``` es la ruta del archivo específico dentro del respositorio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**\n",
+    "\n",
+    "* Para conocer los cambios ocurridos en el archivo ```archivo-1``` entre el commit ```2e819d5``` y el commit ```9b87e9b4``` se ejecutaría lo siguiente:\n",
+    "\n",
     "``` bash\n",
     "> git diff 2e819d5 9b87e9b4 archivo-1\n",
+    "```\n",
     "\n",
+    "* Y el resultado sería similar al siguiente:\n",
+    "\n",
+    "``` bash\n",
     "diff --git a/archivo-1 b/archivo-1\n",
     "index e69de29..a19abfe 100644\n",
     "--- a/archivo-1\n",
@@ -1126,7 +1452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git diff c4c7d69 d8dfa45 archivo-1"
+    "git diff 4237089 a26eaf2 archivo-1 # NOTA: Es necesario sustituir los números identificadores."
    ]
   },
   {
